fixed issue with css and header not showing up in certain conditions of header

--- a/wp-content/themes/nycga2012/style.css
+++ b/wp-content/themes/nycga2012/style.css
@@ -28,6 +28,7 @@ Tags: buddypress, three-column, multi-site
 	line-height: 1;
 	text-transform: uppercase;
 	color:#000 !important;
+	display: block !important;
 }
 
 #header h1 .ows{
